--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    background-color: teal;
 }
 
 .container {
@@ -11,6 +12,7 @@ body {
 
 .header {
     text-align: center;
+    padding: 30px 0px;
 }
 
 .container, .header{
@@ -21,4 +23,10 @@ body {
     border: 1px solid black;
     width: 20px;
     height: 20px;
+}
+
+button {
+    padding: 10px;
+    border: none;
+    border-radius: 20px;
 }
