--- a/styles.css
+++ b/styles.css
@@ -5,28 +5,68 @@ body {
     background-color: teal;
 }
 
+.mainContainer {
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+
+}
+
+.btns {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding: 30px;
+    height: 0px;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
+    border: 10px dotted black;
+    padding: 20px;
+    border-radius: 20px;
 }
 
 .header {
     text-align: center;
-    padding: 30px 0px;
-}
-
-.container, .header{
+    padding: 50px 0px 50px 250px;
     margin: auto;
+
 }
 
 .box {
     border: 1px solid black;
     width: 20px;
     height: 20px;
+    background-color: white;
 }
 
-button {
+button, .setupGridInput {
     padding: 10px;
     border: none;
     border-radius: 20px;
 }
+
+.defaultColor {
+    background-color: #363535;
+    color: white;
+}
+
+.gridRainbow {
+    background: linear-gradient(
+        90deg,
+        rgba(255, 0, 0, 1) 0%,
+        rgba(255, 154, 0, 1) 10%,
+        rgba(208, 222, 33, 1) 20%,
+        rgba(79, 220, 74, 1) 30%,
+        rgba(63, 218, 216, 1) 40%,
+        rgba(47, 201, 226, 1) 50%,
+        rgba(28, 127, 238, 1) 60%,
+        rgba(95, 21, 242, 1) 70%,
+        rgba(186, 12, 248, 1) 80%,
+        rgba(251, 7, 217, 1) 90%,
+        rgba(255, 0, 0, 1) 100%
+    );
+}
+
